// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: large PR with many files 1`] = `
"## ✅ PR Size Check Passed

### 📊 Basic Metrics

- Total Additions: **200**
- Total Files Changed: **5**
- Excluded Files: **0**
- Binary files skipped: **0**

**All files are within size limits** ✅

### 📊 File Analysis

| File Name | Size | Lines | Changes | Status |
|------|------|-------|----------|----------|
| src/file1.ts | 48.8 KB | 500 | +100/-20 | ✅ OK |
| src/file2.ts | 29.3 KB | 300 | +50/-10 | ✅ OK |
| src/file3.ts | 19.5 KB | 200 | +30/-5 | ✅ OK |
| src/file4.ts | 9.8 KB | 100 | +15/-2 | ✅ OK |
| src/file5.ts | 4.9 KB | 50 | +5/-1 | ✅ OK |

---
*Generated by [PR Labeler](https://github.com/marketplace/actions/pr-labeler)*
<!-- pr-labeler -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: no violations 1`] = `
"## ✅ PR Size Check Passed

### 📊 Basic Metrics

- Total Additions: **100**
- Total Files Changed: **0**
- Excluded Files: **1**
- Binary files skipped: **1**

**All files are within size limits** ✅

---
*Generated by [PR Labeler](https://github.com/marketplace/actions/pr-labeler)*
<!-- pr-labeler -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: with errors 1`] = `
"## ✅ PR Size Check Passed

### 📊 Basic Metrics

- Total Additions: **50**
- Total Files Changed: **0**
- Excluded Files: **0**
- Binary files skipped: **0**
- Files with errors: **2** ⚠️

**All files are within size limits** ✅

### ⚠️ Analysis Errors

Some files could not be analyzed:

- src/error1.ts
- src/error2.ts

---
*Generated by [PR Labeler](https://github.com/marketplace/actions/pr-labeler)*
<!-- pr-labeler -->"
`;

exports[`CommentManager > generateCommentBody > snapshot tests (for refactoring safety) > should match snapshot: with violations 1`] = `
"## 📊 PR Size Check - Large PR Detected

### 📊 Basic Metrics

- Total Additions: **1,500**
- Total Files Changed: **2**
- Excluded Files: **0**
- Binary files skipped: **0**

### 📊 Size Summary

- **1 file(s) exceed size limit**
- **1 file(s) exceed line limit**
- **Total additions exceed limit**

### 📊 File Analysis

| File Name | Size | Lines | Changes | Status |
|------|------|-------|----------|----------|
| src/large.ts | 1.9 MB | 2,000 | +1,000/-0 | ⚠️ Line Exceed (1,000) |
| src/normal.ts | 4.9 KB | 100 | +50/-10 | ✅ OK |

### 💡 Improvement Actions

Here are some ways to reduce your PR size:

#### 📦 PR Splitting Strategies
- **Split by feature: Create separate PRs for independent features**
- **Split by file groups: Group related files and merge incrementally**
- **Separate refactoring and new features: Keep code improvements and new functionality in different PRs**

#### 🔨 Large File Refactoring
- Split functions or classes into multiple files
- Extract common logic into separate modules
- Organize files by layer (utils, services, components)

#### 📄 Handling Generated/Lock Files
- Exclude lock files (package-lock.json, yarn.lock) in \`.github/pr-labeler.yml\`
- Manage build artifacts (dist/, build/) with \`.gitignore\`
- Consider updating auto-generated code in separate PRs

<details>
<summary>📚 Best Practices (Click to expand)</summary>

#### Recommended PR Size
- ✅ **Recommended: Under 400 lines**
  - Review time: 15-30 minutes
  - Bug detection rate: High
- ⚠️ **Acceptable: 400-1000 lines**
  - Review time: 1-2 hours
  - Incremental review recommended
- 🚫 **Avoid: Over 1000 lines**
  - Review efficiency significantly decreases
  - Higher risk of missing bugs

#### File Size Guidelines
- Aim for under 500 lines per file
- For complex files, under 300 lines is ideal
</details>

---
*Generated by [PR Labeler](https://github.com/marketplace/actions/pr-labeler)*
<!-- pr-labeler -->"
`;
